syntax = "proto3";

package model;

import "model/environment.proto";
import "google/protobuf/timestamp.proto";

message GitStore {
  bool disabled = 1;
  string repository = 2;
  string branch = 3;
  string capsule_path = 4;
  string capsule_set_path = 10;
  string commit_template = 5;
  EnvironmentFilter environments = 6;
  string pr_title_template = 7;
  string pr_body_template = 8;
  bool require_pull_request = 9;
}

message Commit {
  reserved 2, 5;
  GitProvider provider = 1;
  oneof provider_info {
    GitHubInfo github = 7;
    GitLabInfo gitlab = 8;
    BitBucketInfo bitbucket = 9;
  }
  string commit_id = 3;
  string commit_url = 4;
  string repository_url = 6;
}

message GitChange {
  Commit commit = 1;
  repeated string paths = 2;
}

enum GitProvider {
  GIT_PROVIDER_UNSPECIFIED = 0;
  GIT_PROVIDER_GITHUB = 1;
  GIT_PROVIDER_GITLAB = 2;
  GIT_PROVIDER_BITBUCKET = 3;
}

message GitStatus {
  string last_processed_commit_id = 1;
  google.protobuf.Timestamp last_processed_commit_time = 2;
  string last_successful_commit_id = 3;
  google.protobuf.Timestamp last_successful_commit_time = 4;
  string error = 5;
}

message RepoBranch {
  string repository = 1;
  string branch = 2;
}

message GitHubInfo {
  string owner = 1;
  string repository = 2;
}

message GitLabInfo {
  repeated string groups = 1;
  string project = 2;
}

message BitBucketInfo {
  string team = 1;
  string project = 2;
  string repository = 3;
}
